<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny_background"
    tools:context=".ui.main.view.MainActivity">


    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/notificationImage"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        />


        <TextView
            android:id="@+id/notification_badge"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:background="@drawable/badge_background"
            app:layout_constraintStart_toStartOf="@id/notificationImage"
            app:layout_constraintTop_toTopOf="@id/notificationImage"
            android:textSize="15sp"
            android:layout_marginStart="-6dp"
            android:layout_marginTop="-6dp"
            android:gravity="center"
            android:textStyle="bold"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_location"
        android:focusable="true"
        android:hint="@string/cairo_egypt"
        android:clickable="true"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_location"
        android:drawablePadding="12dp"
        app:layout_constraintStart_toEndOf="@id/favImage"
        app:layout_constraintEnd_toStartOf="@id/notificationImage"
        app:layout_constraintTop_toTopOf="@id/favImage"
        app:layout_constraintBottom_toBottomOf="@id/favImage"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/merriweathersans_bold"
        />


    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/favImage"
        android:contentDescription="TODO"
        android:src="@drawable/ic_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favImage"
        app:lottie_autoPlay="true"
        />

   <!-- <TextView
        android:id="@+id/cond_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/condition"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintStart_toStartOf="@id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />-->

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/today"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/lottieAnimationView"
        />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/temp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView"
        app:layout_constraintEnd_toEndOf="@+id/today"
        app:layout_constraintStart_toStartOf="@+id/today"
        app:layout_constraintTop_toBottomOf="@+id/today"
        />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:hint="@string/day"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/lottieAnimationView"
        app:layout_constraintTop_toTopOf="@+id/today"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day"
        android:layout_marginBottom="15dp"
        />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/date"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/max"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/mini_temp"
        app:layout_constraintEnd_toEndOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <TextView
        android:id="@+id/mini_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mini"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toStartOf="@id/max_temp"
        app:layout_constraintTop_toTopOf="@+id/max_temp" />




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hours_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/day_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/mini_temp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/day_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fram"
        app:layout_constraintTop_toBottomOf="@+id/hours_recycler_view"
        />
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:id="@+id/fram"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/backgroundshapeweather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day_recycler_view"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout25"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshapeweather"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/humidity" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_00"
                    android:textColor="@color/black" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout26"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshapeweather"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wind" />

                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ooms"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/wind"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout27"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshapeweather"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/conditions" />

                <TextView
                    android:id="@+id/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sunny"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/condition"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout28"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshapeweather"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sunrise" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sunrisee"
                    android:gravity="center"
                    android:text="@string/_00_00"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/sunrise"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout29"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshapeweather"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sunsetIm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sunset" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="00:00"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/sunsetT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout30"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/backgroundshapeweather"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sea" />

                <TextView
                    android:id="@+id/sea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0000_hpa"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/sea"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="linearLayout25,linearLayout26,linearLayout27,linearLayout28,linearLayout29,linearLayout30"
                app:flow_maxElementsWrap="3"
                app:flow_wrapMode="chain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_settings"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fram"
        app:layout_constraintTop_toBottomOf="@id/fram" />

    <ImageView
        android:id="@+id/open_fav"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image"
        android:src="@drawable/open_favorite"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/fram"
        app:layout_constraintTop_toBottomOf="@id/fram"

        />

</androidx.constraintlayout.widget.ConstraintLayout>